test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/invalid_array_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  struct
  identifier(incomplete)
  ;
  struct
  identifier(s)
  {
  struct
  identifier(incomplete)
  (
  *
  identifier(array_pointer)
  )
  [
  const int(3)
  ]
  ;
  }
  ;
